<resources>
    <string name="app_name">Volley Resquest App</string>
    <string name="url">Url</string>
    <string name="send">Send</string>
    <string name="value">Value</string>
    <string name="param">Param</string>
    <string name="params">Params</string>
    <string name="name">Name</string>
    <string name="authentication">Authentication</string>
    <string name="username">Username</string>
    <string name="password">Password</string>

    <string-array name="request_type">
        <item>GET</item>
        <item>POST</item>
        <item>PUT</item>
        <item>DELETE</item>
        <item>HEAD</item>
        <item>OPTIONS</item>
        <item>TRACE</item>
        <item>PATCH</item>
    </string-array>

    <string-array name="auth_type">
        <item>No Auth</item>
        <item>Basic Auth</item>
    </string-array>
</resources>
